tests/ui/traits/next-solver/alias-relate/alias_eq_substs_eq_not_intercrate.stderr
error: hi
  --> $DIR/alias_eq_substs_eq_not_intercrate.rs:13:1
   |
LL | trait Overlaps<T> {}
   | ----------------- built-in `dyn Overlaps<Box<_>>` implementation for this trait
LL |
LL | impl<T: TraitB> Overlaps<Box<T>> for <T as TraitB>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error[E0119]: conflicting implementations of trait `Overlaps<Box<_>>` for type `<_ as TraitB>::Assoc`
  --> $DIR/alias_eq_substs_eq_not_intercrate.rs:14:1
   |
LL | impl<T: TraitB> Overlaps<Box<T>> for <T as TraitB>::Assoc {}
   | --------------------------------------------------------- first implementation here
LL | impl<U: TraitB> Overlaps<U> for <U as TraitB>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `<_ as TraitB>::Assoc`
   |
   = note: downstream crates may implement trait `TraitB` for type `std::boxed::Box<_>`

error: hi
  --> $DIR/alias_eq_substs_eq_not_intercrate.rs:14:1
   |
LL | trait Overlaps<T> {}
   | ----------------- built-in `dyn Overlaps<_>` implementation for this trait
...
LL | impl<U: TraitB> Overlaps<U> for <U as TraitB>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
